gone through most of html content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!--Everything in the body appears on the web page -->
   <body>
-    <p>This is my page</p>
+    <p>THIS IS THE HOME PAGE</p>
 
     <!--Example of new lines -->
     <br></br>
@@ -20,7 +20,7 @@
 	<p><strong>BLOCKLINE ELEMENTS</strong></p>
 	<p>fourth</p><p>fifth</p><p>sixth</p>
 
-	<!--Example of ATTRIBUTES -->
+	<!--Example of ATTRIBUTES (hyperlink example)-->
   	<a href="https://www.mozilla.org/">A link to my favorite website.</a>
   	<p class="CSS_THING"> Something we can style with </p>
 
@@ -42,14 +42,21 @@
 
 	<p>Several more hours had passed, when all of a sudden the specter sat bolt upright and exclaimed, "Please have mercy on my soul!"</p>
 
-
-
+	<!--Example of List-->
 	<ul>
 	  <li>milk</li>
 	  <li>eggs</li>
 	  <li>bread</li>
 	  <li>hummus</li>
 	</ul>
+
+	<!--Example of referencing an image-->
+	<a href="https://www.mozilla.org/en-US/">
+  		<img src="mozilla-image.png" alt="mozilla logo that links to the mozilla homepage">
+	</a>
+
+	<!--Example of referencing to a local page-->
+	
 
   </body>
 </html>
